# kafkaesque

./: .eslintrc.js  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  kafkaesque.cabal  package.json  stack.yaml
app/: Main.hs  RequestHandlers.hs
app/RequestHandlers/: ApiVersions.hs  Fetch.hs  Metadata.hs  OffsetList.hs  Produce.hs  Queries.hs
src/: KafkaMessage.hs  constants.js  in_memory_log_store.js  length_prefixed_frame.js  messages.js  server.js
src/Kafkaesque/: ApiKey.hs  ApiVersion.hs  KafkaError.hs  Message.hs  Parsers.hs  Queries.hs  Request.hs  Response.hs  Serialize.hs
src/Kafkaesque/Protocol/: ApiKey.hs  ApiVersion.hs
src/Kafkaesque/Queries/: ConsumerOffsets.hs  Log.hs
src/Kafkaesque/Request/: ApiVersion.hs  ApiVersions.hs  Fetch.hs  KafkaRequest.hs  Metadata.hs  OffsetCommit.hs  OffsetFetch.hs  OffsetList.hs  Offsets.hs  Parsers.hs  Produce.hs  Queries.hs  TopicMetadata.hs
src/kafka_protocol/: common.js  fetch_request.js  fetch_response.js  index.js  message.js  message_set.js  metadata_request.js  metadata_response.js  produce_request.js  produce_response.js
test/: in_memory_log_store.js  length_prefixed_frame.js  messages.js
