name:                kafkaesque
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/kafkaesque#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Werror
  exposed-modules:     Kafkaesque.Request
                     , Kafkaesque.Response
                     , Kafkaesque.Message
                     , Kafkaesque.KafkaError
                     , Kafkaesque.ApiVersion
                     , Kafkaesque.Request.KafkaRequest
                     , Kafkaesque.Parsers
                     , Kafkaesque.Request.Produce
                     , Kafkaesque.Request.Fetch
                     , Kafkaesque.Request.OffsetList
                     , Kafkaesque.Request.TopicMetadata
                     , Kafkaesque.Request.OffsetCommit
                     , Kafkaesque.Request.OffsetFetch
                     , Kafkaesque.Request.ApiVersions
                     , Kafkaesque.Queries
                     , Kafkaesque.Queries.Log
                     , Kafkaesque.Queries.ConsumerOffsets
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , attoparsec-binary
                     , bytestring
                     , cereal
                     , utf8-string
                     , postgresql-simple
                     , resource-pool
                     , cryptohash
                     , digest
  default-language:    Haskell2010

executable kafkaesque-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       RequestHandlers
  build-depends:       base
                     , kafkaesque
                     , network
                     , utf8-string
                     , bytestring
                     , cereal
                     , attoparsec
                     , postgresql-simple
                     , resource-pool
  default-language:    Haskell2010

test-suite kafkaesque-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kafkaesque
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/kafkaesque
